AC-302 Fix problems builders

--- a/web/admin/source/resource/html/crud.html
+++ b/web/admin/source/resource/html/crud.html
@@ -53,3 +53,5 @@
         <crud-datatable />
     </div>
 </div>
+
+<toaster-container toaster-options="{'position-class': 'toast-bottom-right'}"></toaster-container>
