--- a/web/admin/source/resource/html/crud.html
+++ b/web/admin/source/resource/html/crud.html
@@ -1,4 +1,3 @@
-
 <h3>
     <em class="{{icon}} mr"></em>
     <span translate="{{title}}"></span>
@@ -12,7 +11,7 @@
         </h3>
     </div>
     <div class="panel-body">
-        <form crud-form="filter"></form>
+        <crud-form data="filter" options="{ container: { class: 'col-lg-6' } }"></crud-form>
     </div>
 </div>
 
@@ -26,34 +25,38 @@
                 </h3>
             </div>
             <div class="col-xs-6">
-                <div class="btn-group pull-right">
-                    <button type="button" class="btn btn-sm btn-danger" tooltip="Delete users">
-                        <em class="icon-user-unfollow"></em>
-                    </button>
-                </div>
-
-                <div class="btn-group pull-right mr">
-                    <button type="button" class="btn btn-sm btn-default" tooltip="Enable users">
-                        <em class="icon-lock-open"></em>
-                    </button>
-                    <button type="button" class="btn btn-sm btn-default" tooltip="Disable users">
-                        <em class="icon-lock"></em>
-                    </button>
-                </div>
-
-                <div class="btn-group pull-right mr">
-                    <button type="button" class="btn btn-sm btn-success" tooltip="Add new user">
-                        <em class="icon-user-follow"></em>
-                    </button>
-                </div>
+                <crud-toolbar options="{ pull: 'right' }" ></crud-toolbar>
             </div>
         </div>
         <hr class="mt mb0"/>
     </div>
     <div class="panel-body">
-        <crud-datatable/>
+        <crud-datatable></crud-datatable>
     </div>
 </div>
+
+<script type="text/ng-template">
+    <div class="btn-group pull-left mr">
+        <button type="button" class="btn btn-sm btn-danger" tooltip="Delete users">
+            <em class="icon-user-unfollow"></em>
+        </button>
+    </div>
+
+    <div class="btn-group mr">
+        <button type="button" class="btn btn-sm btn-default" tooltip="Enable users">
+            <em class="icon-lock-open"></em>
+        </button>
+        <button type="button" class="btn btn-sm btn-default" tooltip="Disable users">
+            <em class="icon-lock"></em>
+        </button>
+    </div>
+
+    <div class="btn-group mr">
+        <button type="button" class="btn btn-sm btn-success" tooltip="Add new user">
+            <em class="icon-user-follow"></em>
+        </button>
+    </div>
+</script>
 
 <script type="text/ng-template" id="crud/datatable.html">
     <div>
@@ -75,6 +78,35 @@
             </thead>
         </table>
     </div>
+</script>
+
+<script type="text/ng-template" id="crud/form.html">
+    <div>
+        <form role="form" novalidate="" class="form-validate form-horizontal ng-pristine"></form>
+    </div>
+</script>
+
+<script type="text/ng-template" id="crud/dialog.html">
+
+    <div class="whirl traditional" ng-hide="isLoaded">
+        <div>
+            <div>{{ 'admin.general.LOADING' | translate }}</div>
+        </div>
+    </div>
+
+    <div ng-show="isLoaded">
+
+        <h3 class="mt0 mb-lg">
+            <em class="{{ icon }} mr"></em><!--
+        --><span>{{ title | translate }}</span>
+        </h3>
+
+        <div ng-repeat="error in errors track by $index" class="alert alert-danger text-center">{{ error }}</div>
+
+        <crud-form source="form.source"></crud-form>
+
+    </div>
+
 </script>
 
 <toaster-container toaster-options="{'position-class': 'toast-bottom-right'}"></toaster-container>
