AC-302 Fix problems builders

--- a/web/admin/source/resource/html/crud.html
+++ b/web/admin/source/resource/html/crud.html
@@ -11,7 +11,7 @@
         </h3>
     </div>
     <div class="panel-body">
-        <crud-form data="filter" options="{ container: { class: 'col-lg-6' } }"></crud-form>
+        <crud-form data="filter" options="{ layout: 'columns' }"></crud-form>
     </div>
 </div>
 
