--- a/web/admin/source/resource/html/crud.html
+++ b/web/admin/source/resource/html/crud.html
@@ -11,7 +11,9 @@
         </h3>
     </div>
     <div class="panel-body">
+
         <crud-form data="filter" options="{ layout: 'columns' }"></crud-form>
+
     </div>
 </div>
 
@@ -25,38 +27,21 @@
                 </h3>
             </div>
             <div class="col-xs-6">
+
                 <crud-toolbar options="{ pull: 'right' }" ></crud-toolbar>
+
             </div>
         </div>
         <hr class="mt mb0"/>
     </div>
     <div class="panel-body">
+
         <crud-datatable></crud-datatable>
+
     </div>
 </div>
 
-<script type="text/ng-template">
-    <div class="btn-group pull-left mr">
-        <button type="button" class="btn btn-sm btn-danger" tooltip="Delete users">
-            <em class="icon-user-unfollow"></em>
-        </button>
-    </div>
-
-    <div class="btn-group mr">
-        <button type="button" class="btn btn-sm btn-default" tooltip="Enable users">
-            <em class="icon-lock-open"></em>
-        </button>
-        <button type="button" class="btn btn-sm btn-default" tooltip="Disable users">
-            <em class="icon-lock"></em>
-        </button>
-    </div>
-
-    <div class="btn-group mr">
-        <button type="button" class="btn btn-sm btn-success" tooltip="Add new user">
-            <em class="icon-user-follow"></em>
-        </button>
-    </div>
-</script>
+<toaster-container toaster-options="{'position-class': 'toast-bottom-right'}"></toaster-container>
 
 <script type="text/ng-template" id="crud/datatable.html">
     <div>
@@ -80,12 +65,6 @@
     </div>
 </script>
 
-<script type="text/ng-template" id="crud/form.html">
-    <div>
-        <form role="form" novalidate="" class="form-validate form-horizontal ng-pristine"></form>
-    </div>
-</script>
-
 <script type="text/ng-template" id="crud/dialog.html">
 
     <div class="whirl traditional" ng-hide="isLoaded">
@@ -103,10 +82,8 @@
 
         <div ng-repeat="error in errors track by $index" class="alert alert-danger text-center">{{ error }}</div>
 
-        <crud-form source="form.source"></crud-form>
+        <crud-form source="form.source" events="form.events" options="{ buttons:  }"></crud-form>
 
     </div>
 
 </script>
-
-<toaster-container toaster-options="{'position-class': 'toast-bottom-right'}"></toaster-container>
