AC-302 Fix problems builders

--- a/web/admin/source/resource/html/crud.html
+++ b/web/admin/source/resource/html/crud.html
@@ -57,7 +57,7 @@
                 <th ng-repeat="column in vm.datatable.columns" class="bt0 bl0" translate="{{ column }}"></th>
                 <th data-sortable="false" class="bt0 bl0" width="1"></th>
                 <th data-sortable="false" class="bt0 bl0 p text-center" width="1">
-                    <crud-ui type="checkbox"/>
+                    <crud-ui type="checkbox"></crud-ui>
                 </th>
             </tr>
             </thead>
