--- a/web/admin/source/resource/html/grid-template.html
+++ b/web/admin/source/resource/html/grid-template.html
@@ -61,7 +61,7 @@
                 <div class="col-xs-6">
                     <h3 class="panel-title mt">
                         <em class="icon-layers mr-sm"></em>
-                        Data list
+                        <span translate="admin.general.DATA_LIST">Data list</span>
                     </h3>
                 </div>
 
