AC-302 Fix problems builders

--- a/web/admin/source/resource/html/crud.html
+++ b/web/admin/source/resource/html/crud.html
@@ -12,7 +12,7 @@
             </h3>
         </div>
         <div class="panel-body">
-            <crud-form data="form.filter.data" options="form.filter.options"></crud-form>
+            <crud-form struct="form.filter"></crud-form>
         </div>
     </div>
 
