AC-302 Fix problems builders

--- a/web/admin/source/resource/html/crud.html
+++ b/web/admin/source/resource/html/crud.html
@@ -32,7 +32,7 @@
             <hr class="mt mb0"/>
         </div>
         <div class="panel-body">
-            <crud-datatable toolbar="main"></crud-datatable>
+            <crud-datatable manifest="vm.datatable" toolbar="main"></crud-datatable>
         </div>
     </div>
 
