AC-302 Fix problems builders

--- a/web/admin/source/resource/html/crud.html
+++ b/web/admin/source/resource/html/crud.html
@@ -4,15 +4,18 @@
         <span translate="{{ title }}"></span>
     </h3>
 
-    <div class="panel panel-default">
+    <div id="filter" class="panel panel-default">
         <div class="panel-heading">
+            <paneltool tool-collapse="tool-collapse" tool-refresh="traditional"></paneltool>
             <h3 class="panel-title">
                 <em class="fa fa-filter mr-sm"></em>
                 {{ 'admin.general.FILTERS' | translate }}
             </h3>
         </div>
-        <div class="panel-body">
-            <form manifest="vm.filter"></form>
+        <div uib-collapse="filter" class="panel-wrapper">
+            <div class="panel-body">
+                <form manifest="vm.filter"></form>
+            </div>
         </div>
     </div>
 
@@ -26,13 +29,13 @@
                     </h3>
                 </div>
                 <div class="col-xs-6">
-                    <crud-toolbar id="main"></crud-toolbar>
+                    <toolbar manifest="vm.toolbar"></toolbar>
                 </div>
             </div>
             <hr class="mt mb0"/>
         </div>
         <div class="panel-body">
-            <crud-datatable manifest="vm.datatable" toolbar="main"></crud-datatable>
+            <crud-datatable manifest="vm.datatable"></crud-datatable>
         </div>
     </div>
 
@@ -40,22 +43,23 @@
 
     <script type="text/ng-template" id="crud/dialog.html">
 
-        <div class="whirl traditional" ng-hide="isLoaded">
+        <div class="whirl traditional" ng-hide="vm.isLoaded">
             <div>
                 <div>{{ 'admin.general.LOADING' | translate }}</div>
             </div>
         </div>
 
-        <div ng-show="isLoaded">
+        <div ng-show="vm.isLoaded">
 
             <h3 class="mt0 mb-lg">
-                <em class="{{ icon }} mr"></em><!--
-        --><span>{{ title | translate }}</span>
+                <em class="{{ vm.icon }} mr"></em>{{ vm.title | translate }}
             </h3>
 
-            <div ng-repeat="error in errors track by $index" class="alert alert-danger text-center">{{ error }}</div>
+            <div ng-show="vm.errors.length > 0" class="alert alert-danger">
+                <div ng-repeat="error in vm.errors track by $index">{{ error }}</div>
+            </div>
 
-            <crud-form source="form.source" events="form.events" options="form.options"></crud-form>
+            <form manifest="vm.form"></form>
 
         </div>
 
