--- a/web/admin/source/resource/html/crud.html
+++ b/web/admin/source/resource/html/crud.html
@@ -25,7 +25,7 @@
                 <div class="col-xs-6">
                     <h3 class="panel-title mt">
                         <em class="icon-layers mr-sm"></em>
-                        <span translate="">Data list</span>
+                        {{ 'admin.general.DATA_LIST' | translate }}
                     </h3>
                 </div>
                 <div class="col-xs-6">
