--- a/web/admin/source/resource/html/dashboard.html
+++ b/web/admin/source/resource/html/dashboard.html
@@ -4,7 +4,7 @@
 </h3>
 
 <!-- START widgets box-->
-<div class="row">
+<div class="row dashboard">
     <div class="col-lg-3 col-sm-6">
         <!-- START widget-->
         <div
